# ResNet-with-arcface-margin-loss-

./: CMakeLists.txt  jit_model.py  main.cpp
include/: load.hpp  metric.hpp  train.hpp
load/: CMakeLists.txt  load.cpp  load.hpp
load/include/: load.h
model/: CMakeLists.txt  main.cpp
model/include/: loss.h  metric.hpp  resnet.hpp
model/src/: loss.cpp  resnet.cpp
src/: metric.cpp  train.cpp
